# SerialFiller

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  README.rst
examples/: BasicExample.cpp  CMakeLists.txt  ExceptionCheckingExample.cpp  main.cpp
include/SerialFiller/: CobsTranscoder.hpp  Constants.hpp  Crc16Ccitt1021.hpp  Definitions.hpp  Event.hpp  Logger.hpp  Semaphore.hpp  SerialFiller.hpp  SerialFillerHelper.hpp  String.hpp
include/SerialFiller/Exceptions/: CobsDecodingFailed.hpp  CrcCheckFailed.hpp  LengthOfTopicTooLong.hpp  NotEnoughBytes.hpp  SerialFillerException.hpp
src/: CMakeLists.txt  CobsTranscoder.cpp  Crc16Ccitt1021.cpp  SerialFiller.cpp  SerialFillerHelper.cpp
src/include/SerialFiller/: CobsTranscoder.hpp  Constants.hpp  Crc16CCitt1021.hpp  SerialFiller.hpp  SerialFillerHelper.hpp
src/include/SerialFiller/Exceptions/: CrcCheckFailed.hpp  NoTopicDataSeparator.hpp  RxDataErrors.hpp
src/msgs/: test.proto
test/: AddAndVerifyCrcTests.cpp  CMakeLists.txt  CallbackTests.cpp  CobsEncodeDecodeTests.cpp  CrcTests.cpp  DecodePacketTests.cpp  GiveRxDataExceptionTests.cpp  HandleRxDataReceivedTests.cpp  LoopBackTests.cpp  NoSubscribersTests.cpp  PacketizeTests.cpp  SerialFillerTests.cpp  SplitPacketTests.cpp  main.cpp
test/integration/: Node.hpp  ThreadSafeQ.hpp  TwoNodeAckTests.cpp
tools/: build.sh
